fixed portfolio spacing

--- a/_sass/modules/_portfoliomodules.scss
+++ b/_sass/modules/_portfoliomodules.scss
@@ -1,19 +1,19 @@
+.folio-wrapper {
+     margin: 150px 0px 0px 0px;
+}
+
 .folio {
     width:100%;
-    margin:0px;
     padding: 0px;
+    margin: 5px 0px 0px 0px;
 }
 
 .foliodiv {
     display: inline-block;
     width: 25%;
-    height: 25px;
 }
 
 .foliodiv img {
     width: 100%;
-}
-
-.foliodiv a {
-    max-height: 2px;
+    vertical-align:bottom;
 }
